Fixed some layout issues when editing

--- a/src/styles/base/page-editing/page-editing.scss
+++ b/src/styles/base/page-editing/page-editing.scss
@@ -3,7 +3,7 @@ body {
 }
 
 body.-editing {
-    padding-left: 160px;
+    padding-left: 320px;
 
     .imageWithText [href=" "] {
         pointer-events: auto;
