--- a/src/styles/mixins/layout/container/container.scss
+++ b/src/styles/mixins/layout/container/container.scss
@@ -11,3 +11,15 @@
     max-width: calc(100vw - #{$gutter});
     margin: 0 auto;
 }
+
+body.-editing .page-content {
+
+    padding-left: calc(
+        (100vw - #{$siteWidth} - 160px) / 
+        2
+    );
+    padding-right: calc(
+        (100vw - #{$siteWidth} - 160px) / 
+        2
+    );        
+}
